# skills-agent

./: .gitignore  LICENSE  README.md  ROADMAP.md  V0_7_MIGRATION_PLAN.md  debug_cli.py  fix_list_command.py  insert_commands.py  patch_doctor.py  pyproject.toml  test_cli.py  verify_zip.ps1
.agent/: STATE.md  prd.md
.agent/skills/agent_collaboration/: SKILL.md
.agent/skills/code_review/: SKILL.md
.agent/skills/debugging/: SKILL.md
.agent/skills/git_workflow/: SKILL.md
.agent/skills/how_to_create_implementation_plan/: SKILL.md
.agent/skills/how_to_create_skills/: SKILL.md
.agent/skills/how_to_research/: SKILL.md
.agent/skills/prompt_engineering/: SKILL.md
.agent/skills/software_lifecycle/: SKILL.md
.agent/workflows/: build-a-saas-mvp.md
.agents/: prd.md
.agents/plans/: README.md
.agents/skills/agent_collaboration/: SKILL.md
.agents/skills/agentic_workflow/: SKILL.md
.agents/skills/agno_best_practices/: SKILL.md
.agents/skills/context_engineering/: SKILL.md
.agents/skills/debugging/: SKILL.md
.agents/skills/frontend_best_practices/: SKILL.md
.agents/skills/frontend_testing_best_practices/: SKILL.md
.agents/skills/git_workflow/: SKILL.md
.agents/skills/how_to_create_implementation_plan/: SKILL.md
.agents/skills/how_to_create_skills/: SKILL.md
.agents/skills/how_to_research/: SKILL.md
.agents/skills/prompt_engineering/: SKILL.md
.github/workflows/: package-quality.yml
scripts/: check_package_quality.py
src/skills_agent_lib/: cli.py
src/skillsmith/: __main__.py  cli.py
tests/: test_assets_runtime.py
(+26 files in other folders)
